--- a/MangaRipper.Core/packages.config
+++ b/MangaRipper.Core/packages.config
@@ -5,7 +5,7 @@
   <package id="Jurassic" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="net452" />
   <package id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" targetFramework="net452" />
-  <package id="NETStandard.Library" version="2.0.1" targetFramework="net452" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="net452" requireReinstallation="true" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
@@ -14,10 +14,10 @@
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net452" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net452" />
   <package id="System.IO" version="4.3.0" targetFramework="net452" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Linq" version="4.3.0" targetFramework="net452" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net452" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net452" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net452" />
@@ -35,6 +35,6 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
-  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net452" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
 </packages>
